[project]
name = "subway-invert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.4",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "polars>=1.31.0",
    "scipy>=1.16.0",
    "thin-plate-spline>=1.2.0",
]
